Choosing the option to "Pin Firefox to taskbar" in new profile onboarding does nothing in Microsoft Store installs of Firefox
Categories
(Firefox :: Shell Integration, defect, P3)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox138 | --- | verified |
People
(Reporter: drubino, Assigned: ericchen647)
References
Details
(Whiteboard: [fidedi])
Attachments
(2 files)
If you install Firefox from the Microsoft Store, or in an existing Microsoft Store install create a new profile or merely browse to about:welcome, you are presented with an option to "Pin Firefox to taskbar and start menu". Choosing this option should produce a Windows OS notification prompting you to confirm the pinning request. Currently in Firefox 135 no such prompt is shown, and Firefox is not pinned to the taskbar. Firefox is pinned to the Start menu.
- Install Firefox from the Microsoft Store and launch it
- Check the "Pin Firefox to taskbar or start menu" option (for simplicity you might also uncheck the other options)
- Press "Save and continue"
Expected: A prompt from Windows seeking approval to pin Firefox to the taskbar
Actual: Nothing happens. No prompt, no pinning.
Note: Happens on Windows 10 and Windows 11
| Reporter | ||
Updated•1 year ago
|
Updated•1 year ago
|
Updated•1 year ago
|
Updated•1 year ago
|
Updated•1 year ago
|
Comment 1•1 year ago
|
||
Two things are going on here that need addressing.
- PollAppsFolderForShortcut fails on MSIX, because GetAppUserModelID and the WinTaskbar AUMID code in general isn't written in a way that's aware of MSIX registers and handles system registered AUMIDs - retrievable via GetCurrentApplicationUserModelId. Technically at runtime we can set windows to have their own AUMIDs to be differentiated in the Taskbar from an MSIX install, but these windows are not pinnable via the mechanisms we use.
- We temporarily set the process (not window) AUMID when pinning for our non-MSIX installs. This probably needs better consideration given the above context. Setting the process AUMID to one that doesn't match the MSIX AUMID breaks pinning.
Recording the conversation I had with :nrishel:
MSIX Firefox builds shouldn't have to call PollAppsFolderForShortcut as it's not possible to create a shortcut to a MSIX app anyways. Additionally, it's not necessary/feasible to perform the AUMID switching hack on MSIX when pinning.
To avoid unintended behavior and errors, I will look to prevent MSIX builds from running code paths that does the aforementioned tasks, and it should help fix the problem.
Comment 5•1 year ago
|
||
| bugherder | ||
Looks good to me using latest Nightly 138.0a1 (msix) on Windows 10, Windows 11 and Windows 11 ARM. The pin to taskbar notification is now shown and selecting to pin will work just fine.
Description
•