Bug 1949263 - prevent MSIX Firefox from calling PollAppsFolderForShortcut r=nrishel

Differential Revision: https://phabricator.services.mozilla.com/D239824